--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<button href="https://youtube.com">Click</button>
+<button onclick=function(window.Open("https://youtube.com"))>Click</button>
 </body>
 </html>
