--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<button onclick=function(window.Open("https://youtube.com"))>Click</button>
+<p>WIP :)</p>
+<script>function test() {
+	var path="https://github.com";
+	window.open(path, 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes,resizable=1');
+}
+</script>
+  <button onclick="test()">Github</button>
 </body>
 </html>
