--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>WIP :)</p>
 <script>function test() {
 	var path="https://github.com";
-	window.open(path, 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes,resizable=1');
+	window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
 }
 </script>
   <button onclick="test()">Github</button>
