--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 <p>WIP :)</p>
 <script>function test() {
 	var path="https://github.com";
-	window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
+	window.GitHub = window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
 }
+<script>function closegit() {
+	var path="https://github.com";
+	GitHub.close();
+}	
 </script>
-  <button onclick="test()">Github</button>
+<button onclick="test()">Github</button>
+<button onclick="closegit()">Close GitHub</button>	
 </body>
 </html>
