--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
 <p>WIP :)</p>
 <script>function test() {
 	var path="https://github.com";
-	window.GitHub = window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
-}
-<script>function closegit() {
-	var path="https://github.com";
-	GitHub.close();
+	window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
 }	
 </script>
-<button onclick="test()">Github</button>
-<button onclick="closegit()">Close GitHub</button>	
+<button onclick="test()">Github>	
 </body>
 </html>
