--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+<title>Testing</title>
+<style>
+	body{background-color: black;}
+	h1 {color: white;}
+	p {color: white;}
+</style>
+<body style="background-color: black";>
 <h1>Hello World</h1>
 <p>WIP :)</p>
 <script>function test() {
@@ -8,6 +15,6 @@
 	window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
 }	
 </script>
-<button onclick="test()">Github>	
+	<button onclick="test()">Github</button>	
 </body>
 </html>
