--- a/about/duued.html
+++ b/about/duued.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body onload="hmm();">
-<script> function hmm() {
+<script>
+function hmm() {
 window.Alert("You shouldn't see this, lol, as a reward, here is a little something for you...")
 window.Open("https://www.youtube.com/watch?v=LACbVhgtx9I&ab_channel=TomSka0" "heheh")
 </script>
+<body onload="hmm();">
 </body>
 </html>
