--- a/about/duued.html
+++ b/about/duued.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
-function hmm() {
-window.Alert("You shouldn't see this, lol, as a reward, here is a little something for you...")
-window.Open("https://www.youtube.com/watch?v=LACbVhgtx9I&ab_channel=TomSka0" "heheh")
-</script>
-<body onload="hmm();">
+<body>
+  <h1>Random Iframe to cover some space lol</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/LACbVhgtx9I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
