--- a/404.html
+++ b/404.html
@@ -2,4 +2,6 @@
 <head>
 <body>
 <h1>The page you attempted to find doesn't exist :(</h1>
-<button onclick="window.Open(url="https://duued.github.io" replace=true)"Go home</button>
+<button onclick=function("window.Open(url="https://duued.github.io" replace=true))"Go home</button>
+</body>
+</head>
