--- a/404.html
+++ b/404.html
@@ -3,5 +3,6 @@
 <body>
 <h1>The page you attempted to find doesn't exist :(</h1>
 <button onclick=function("window.Open(url="https://duued.github.io" replace=true))"Go home</button>
+<!-- random escape line to push a pr thingy-->
 </body>
 </head>
