--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 <body style="background-color: black";>
 <h1>Hello World</h1>
 <p>WIP :)</p>
-<script>function test() {
+<script> function test() {
 	var path="https://github.com";
 	window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
 }	
 </script>
-	<button onclick="test()">Github</button>	
+<script> function suckitsecurly() {
+		var path="https://duued.github.io/suckitsecurly"
+		window.site = window.Open(path, '', 'menu=no,toolbar=no,location=no,scrollbars=yes');
+	}
+</script>
+<script> function closeitsecurly() {
+		site.close()
+	<button onclick="test()">Github</button>
+	<button onclick="suckitsecurly()">SuckitSecurly</button>
 </body>
 </html>
