--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 }	
 </script>
 <script> function suckitsecurly() {
-		var path="https://duued.github.io/suckitsecurly"
-		var site = window.Open(path, '', 'menu=no,toolbar=no,location=no,scrollbars=yes');
+		var path="https://duued.github.io/suckitsecurly";
+		var site = window.Open(path, 'suckitsecurly', 'menu=no,toolbar=no,location=no,scrollbars=yes');
 	}
 </script>
 <script> function closeitsecurly() {
