--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
 <script> function suckitsecurly() {
 		var path="https://duued.github.io/suckitsecurly";
-		var site = window.Open(path, 'suckitsecurly', 'menu=no,toolbar=no,location=no,scrollbars=yes');
+		var site = window.Open(path, 'suckitsecurly', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
 	}
 </script>
 <script> function closeitsecurly() {
