--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 }	
 </script>
 <script> function suckitsecurly() {
-		var path="https://duued.github.io/suckitsecurly";
+		var path="https://hide.me/en/proxy";
 		var site = window.open(path, 'suckitsecurly', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
 	}
 </script>
@@ -26,5 +26,6 @@
 </script>
 	<button onclick="test()">Github</button>
 	<button onclick="suckitsecurly()">SuckitSecurly</button>
+	<button onclick="closeitsecurly()">Close SuckitSecurly</button>
 </body>
 </html>
