--- a/404.html
+++ b/404.html
@@ -2,7 +2,11 @@
 <head>
 <body>
 <h1>The page you attempted to find doesn't exist :(</h1>
-<button onclick=function("window.Open(url="https://duued.github.io" replace=true))"Go home</button>
+<script> function gohome() {
+   window.Open("https://duued.github.io" replace=true) 
+  }
+</script>
+<button onclick="gohome()">Go home</button>
 <!-- random escape line to push a pr thingy-->
 </body>
 </head>
