--- a/404.html
+++ b/404.html
@@ -3,10 +3,9 @@
 <body>
 <h1>The page you attempted to find doesn't exist :(</h1>
 <script> function gohome() {
-   window.Open("https://duued.github.io" replace=true) 
+   window.Open("https://duued.github.io" replace="true") 
   }
 </script>
 <button onclick="gohome()">Go home</button>
-<!-- random escape line to push a pr thingy-->
 </body>
 </head>
