--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <body>
 <h1>The page you attempted to find doesn't exist :(</h1>
 <script> function gohome() {
-   window.Open("https://duued.github.io" replace="true") 
+   window.Open("https://duued.github.io") 
   }
 </script>
 <button onclick="gohome()">Go home</button>
