--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <body>
+<title>404 not found</title>
 <h1>The page you attempted to find doesn't exist :(</h1>
 <script> function gohome() {
    window.open("https://duued.github.io") 
