--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Testing</title>
+<title>Some stuff unblocked, nothing special.</title>
 <style>
 	body{background-color: black;}
 	h1 {color: white;}
