--- a/about/duued.html
+++ b/about/duued.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body>
-  <h1>Random Iframe to cover some space lol</h1>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/LACbVhgtx9I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<body onload="changeSite()" style="background-color: darkgray; color: lightgray" link="white", alink="white", vlink="white">
+  <noscript>JavaScript Disabled :(</noscript>
+  <script>
+    function changeSite(){
+      window.open("https://github.com/Duued/duued/blob/main/README.md", "_self");
+    }
+  </script>
+  
+  <h1>Navigation...</h1>
+  <hr/>
+  <h3>You should automatically be linked to <a href="https://github.com/Duued/duued/blob/main/README.md">my profile</a></h3>
+  
 </body>
 </html>
