--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Some stuff unblocked, nothing special.</title>
-<style>
-	body{background-color: black;}
-	h1 {color: white;}
-	p {color: white;}
-</style>
-<body style="background-color: black";>
-<h1>Hello World</h1>
-<p>WIP :)</p>
-<script> function test() {
-	var path="https://github.com";
-	window.open(path, 'Testing', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
-}	
-</script>
-<script> function suckitsecurly() {
-		var path="https://hide.me/en/proxy";
-		var site = window.open(path, 'suckitsecurly', 'width=500,height=425,menu=no,toolbar=no,location=no,scrollbars=yes');
-	}
-</script>
-<script> function closeitsecurly() {
-		window.site.close()
-	}
-</script>
-	<button onclick="test()">Github</button>
-	<button onclick="suckitsecurly()">SuckitSecurly</button>
-	<button onclick="closeitsecurly()">Close SuckitSecurly</button>
+<head title="Redirecting...">
+<body onload="changeSite()" style="background-color: darkgray; color: lightgray" link="white", alink="white", vlink="white">
+  <noscript>JavaScript Disabled :(</noscript>
+  <script>
+    function changeSite(){
+      window.open("https://github.com/Duued/duued/blob/main/README.md", "_self");
+    }
+  </script>
+  
+  <h1>Navigation...</h1>
+  <hr/>
+  <h3>You should automatically be linked to <a href="https://github.com/Duued/duued/blob/main/README.md">my profile</a></h3>
+  
 </body>
 </html>
