--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head title="Redirecting...">
-<body onload="changeSite()" style="background-color: darkgray; color: lightgray" link="white", alink="white", vlink="white">
+<body onload="changeSite()" style="background-color: black; color: white" link="white", alink="white", vlink="white">
   <noscript>JavaScript Disabled :(</noscript>
   <script>
     function changeSite(){
