--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head title="Redirecting...">
+  <meta name="Description" content="Direct link to https://github.com/Duued/duued/blob/main/README.md"></meta>
 <body onload="changeSite()" style="background-color: black; color: white" link="white", alink="white", vlink="white">
   <noscript>JavaScript Disabled :(</noscript>
   <script>
