--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head title="Redirecting...">
   <meta name="Description" content="Direct link to https://github.com/Duued/duued/blob/main/README.md"></meta>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 <body onload="changeSite()" style="background-color: black; color: white" link="white", alink="white", vlink="white">
   <noscript>JavaScript Disabled :(</noscript>
   <script>
