--- a/404.html
+++ b/404.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
-<body>
-<title>404 not found</title>
+   <title>404 not found</title>
+   <link rel="shortcut icon" href="Images/not_found.png"/>
+</head>
+<body style="background-color: gray; color: white">
+
 <h1>The page you attempted to find doesn't exist :(</h1>
 <script> function gohome() {
    window.open("https://duued.github.io") 
@@ -9,4 +12,4 @@
 </script>
 <button onclick="gohome()">Go home</button>
 </body>
-</head>
+
