--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
 <h1>The page you attempted to find doesn't exist :(</h1>
 <script> function gohome() {
-   window.open("https://duued.github.io") 
+   window.open("https://duued.github.io", "_self") 
   }
 </script>
 <button onclick="gohome()">Go home</button>
