Added start page

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
    <title>404 not found</title>
-   <link rel="shortcut icon" href="Images/not_found.png"/>
+   <link rel="shortcut icon" href="images/not_found.png"/>
 </head>
 <body style="background-color: gray; color: white">
 
