Fixed hopefully fr

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="images/home.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body style="background-color: gray; color: white" link="white" alink="white" vlink="whitw">
+    <body style="background-color: gray; color: white" link="white" alink="white" vlink="white">
         <h1 style="text-align: center;">Start Page</h1>
         <hr/>
         <table width="800" align="center">
