--- a/home.html
+++ b/home.html
@@ -46,6 +46,9 @@
                 <td width="100">
                     <a href="https://discordpy.readthedocs.io/en/latest/" target="_blank"><img src="images/discordpy-logo.png" alt="Discord.py docs" width="100"/></a>
                 </td>
+                <td width="100">
+                    <a href="https://onedrive.com" target="_blank"><img src="images/onedrive.png" alt="OneDrive"/></a>
+                </td>
             </tr>
         </table>
         <br/><br/>
