Forgot to set width. Fixed.

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                     <a href="https://discordpy.readthedocs.io/en/latest/" target="_blank"><img src="images/discordpy-logo.png" alt="Discord.py docs" width="100"/></a>
                 </td>
                 <td width="100">
-                    <a href="https://onedrive.com" target="_blank"><img src="images/onedrive.png" alt="OneDrive"/></a>
+                    <a href="https://onedrive.com" target="_blank"><img src="images/onedrive.png" alt="OneDrive" width="100"/></a>
                 </td>
             </tr>
         </table>
