--- a/home.html
+++ b/home.html
@@ -49,6 +49,9 @@
                 <td width="100">
                     <a href="https://onedrive.com" target="_blank"><img src="images/onedrive.png" alt="OneDrive" width="100"/></a>
                 </td>
+                <td width="100">
+                    <a href="https://remove.bg" target="_blank"><img src="images/removebg.png" alt="Remove.bg" width="100"></a>
+                </td>
             </tr>
         </table>
         <br/><br/>
