--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <body style="background-color: gray; color: white" link="white" alink="white" vlink="white">
         <h1 style="text-align: center;">Start Page</h1>
         <hr/>
-        <table width="800" align="center">
+        <table width="50%" height="10%" align="center">
             <tr>
                 <td width="100">
                     <a href="https://roblox.com" target="_blank"><img src="images/roblox-logo.png" alt="Roblox logo" width="100"/></a>
@@ -52,14 +52,17 @@
                 <td width="100">
                     <a href="https://remove.bg" target="_blank"><img src="images/removebg.png" alt="Remove.bg" width="100"></a>
                 </td>
+                <td width="100">
+                    <a href="https://adguard-dns.io" target="_blank"><img src="images/adguard-dns.png" alt="Adguard DNS" width="100"/></a>
+                </td>
             </tr>
         </table>
         <br/><br/>
         <span style="text-align: center;">
-            <h6>By: Dog Knife#6085</h6>
+            <h6>By Dog Knife#6085</h6>
             <h6>Usage is allowed.</h6>
-            <h6>General links I use day-to-day</h6>
-            <h6>Visit my <a href="https://duued.github.io">profile.</a></h6>
+            <h6>General links I use day-to-day.</h6>
+            <h6>Visit my <a href="https://duued.github.io">profile</a></h6>
         </span>
     </body>
 </html>
