Added images, and restyled a little.

--- a/site-blocked.html
+++ b/site-blocked.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Site Blocked</title>
+        <link rel="shortcut icon" href="images/x.png"/>
         <link rel="stylesheet" href="site-blocked.css"/>
     </head>
     <body>
-        <h1>The site you attempted to reach is blocked</h1>
+        <table>
+            <tr>
+                <td><img src="images/x.png" alt="X Mark" width="50"></td>
+                <th>&nbsp;&nbsp;The site you attempted to reach is blocked</th>
+            </tr>
+        </table>
 
         <br/><br/>
         <h2>If you believe this is a mistake, contact your network administrator.</h2>
