--- a/dns/lists.html
+++ b/dns/lists.html
@@ -9,14 +9,14 @@
         I use AdGuard Home, however these can also be used with AdGuard DNS.</p>
     
         <div class="center">
-            <h3><a href="lists/general.txt">General Blocker</a></h3>
+            <h3><a href="https://raw.githubusercontent.com/Duued/duued.github.io/main/dns/lists/general.txt">General Blocker</a></h3>
             <h4>My personal blocker that blocks sites that haven't been blocked by most other filters.</h4>
             <br/><br/>
 
-            <h3><a href="anti-censorship.txt">Anti Censorship Blocker</a></h3>
+            <h3><a href="https://raw.githubusercontent.com/Duued/duued.github.io/main/dns/lists/anti-censorship.txt">Anti Censorship Blocker</a></h3>
             <h4>Blocks blockers that may be used in School or Business software/extensions, along with their trackers.</h4>
             <br/><br/>
-            <h3><a href="adult-blocker.txt">Adult Blocker</a></h3>
+            <h3><a href="https://raw.githubusercontent.com/Duued/duued.github.io/main/dns/lists/adult-blocker.txt">Adult Blocker</a></h3>
             <h4>Blocks adult content.</h4>
         </div>
         <br/><br/>
@@ -26,13 +26,13 @@
 
             <h4>
                 <ol>
-                    <li>Grab the full URL</li>
+                    <li>Copy the list's URL</li>
                     <li>Navigate to your GUI panel</li>
                     <li>Go to DNS blocklists</li>
                     <li>Add New List</li>
                     <li>Add Custom List</li>
                     <li>Give list a name</li>
-                    <li>Paste Full URL</li>
+                    <li>Paste URL</li>
                     <li>Save</li>
                 </ol>
 
