Add sapphire to start page

--- a/home.html
+++ b/home.html
@@ -55,6 +55,9 @@
                 <td width="100">
                     <a href="https://adguard-dns.io" target="_blank"><img src="images/adguard-dns.png" alt="Adguard DNS" width="100"/></a>
                 </td>
+                <td width="100">
+                    <a href="https://sapph.xyz" target="_blank"><img src="images/sapphire.png" alt="Adguard DNS" width="100"/></a>
+                </td>
             </tr>
         </table>
         <br/><br/>
