Add WireGuard, Regex101 to start page.

--- a/home.html
+++ b/home.html
@@ -56,7 +56,15 @@
                     <a href="https://adguard-dns.io" target="_blank"><img src="images/adguard-dns.png" alt="Adguard DNS" width="100"/></a>
                 </td>
                 <td width="100">
-                    <a href="https://sapph.xyz" target="_blank"><img src="images/sapphire.png" alt="Adguard DNS" width="100"/></a>
+                    <a href="https://sapph.xyz" target="_blank"><img src="images/sapphire.png" alt="Sapphire" width="100"/></a>
+                </td>
+                <td width="100">
+                    <a href="https://wireguard.com" target="_blank"><img src="images/wireguard.png" alt="WireGuard" width="100"/></a>
+                </td>
+            </tr>
+            <tr>
+                <td width="100">
+                    <a href="https://regex101.com" target="_blank"><img src="images/regex101.png" alt="Regex101" width="100"/></a>
                 </td>
             </tr>
         </table>
