Update bottom of start page

--- a/home.html
+++ b/home.html
@@ -70,9 +70,9 @@
         </table>
         <br/><br/>
         <span style="text-align: center;">
-            <h6>By Dog Knife#6085</h6>
+            <h6>By <a href="https://discord.com/users/561565119201673216">dogknife</a> on Discord</h6>
             <h6>Usage is allowed.</h6>
-            <h6>General links I use day-to-day.</h6>
+            <h6>General links I use frequently</h6>
             <h6>Visit my <a href="https://duued.github.io">profile</a></h6>
         </span>
     </body>
