Add cloudconvert to start page

--- a/home.html
+++ b/home.html
@@ -66,6 +66,9 @@
                 <td width="100">
                     <a href="https://regex101.com" target="_blank"><img src="images/regex101.png" alt="Regex101" width="100"/></a>
                 </td>
+                <td width="100">
+                    <a href="https://cloudconvert.com" target="_blank"><img src="images/cloudconvert.png" alt="CloudConvert" width="100"/></a>
+                </td>
             </tr>
         </table>
         <br/><br/>
