Add tria.ge to home page

--- a/home.html
+++ b/home.html
@@ -69,6 +69,9 @@
                 <td width="100">
                     <a href="https://cloudconvert.com" target="_blank"><img src="images/cloudconvert.png" alt="CloudConvert" width="100"/></a>
                 </td>
+                <td width="100">
+                    <a href="https://tria.ge" target="_blank"><img src="images/triage.png" alt="Triage" width="100"/></a>
+                </td>
             </tr>
         </table>
         <br/><br/>
