--- a/home.html
+++ b/home.html
@@ -1,85 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css"/>
         <title>Start Page</title>
-        <link rel="shortcut icon" href="images/home.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <script>
+            document.OnLoad(){
+                window.location.href = "https://www.example.com"
+            }
+        </script>
+        <style>
+            body{
+                text-align: center;
+            }
+        </style>
     </head>
-    <body style="background-color: gray; color: white" link="white" alink="white" vlink="white">
-        <h1 style="text-align: center;">Start Page</h1>
-        <hr/>
-        <table width="50%" height="10%" align="center">
-            <tr>
-                <td width="100">
-                    <a href="https://roblox.com" target="_blank"><img src="images/roblox-logo.png" alt="Roblox logo" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://drive.google.com" target="_blank"><img src="images/google-drive.png" alt="Google Drive" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://chrome.google.com/webstore/category/extensions" target="_blank"><img src="images/chrome-web-store.png" alt="Chrome Web Store" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://youtube.com" target="_blank"><img src="images/youtube-logo.png" alt="YouTube" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://github.com" target="_blank"><img src="images/github-logo.png" alt="Github" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://htmlcolorcodes.com/color-picker/" target="_blank"><img src="images/color-picker.png" alt="HTML Color Picker" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://wevideo.com" target="_blank"><img src="images/wevideo-logo.png" alt="WeVideo Editor" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://discord.com" target="_blank"><img src="images/discord-logo.png" alt="Discord App" width="100"/></a>
-                </td>
-            </tr>
-            <tr>
-                <td width="100">
-                    <a href="https://uxwing.com" target="_blank"><img src="images/uxwing.png" alt="Uxwing" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://convertio.co" target="_blank"><img src="images/convertio-logo.png" alt="Convert io" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://discordpy.readthedocs.io/en/latest/" target="_blank"><img src="images/discordpy-logo.png" alt="Discord.py docs" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://onedrive.com" target="_blank"><img src="images/onedrive.png" alt="OneDrive" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://remove.bg" target="_blank"><img src="images/removebg.png" alt="Remove.bg" width="100"></a>
-                </td>
-                <td width="100">
-                    <a href="https://adguard-dns.io" target="_blank"><img src="images/adguard-dns.png" alt="Adguard DNS" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://sapph.xyz" target="_blank"><img src="images/sapphire.png" alt="Sapphire" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://wireguard.com" target="_blank"><img src="images/wireguard.png" alt="WireGuard" width="100"/></a>
-                </td>
-            </tr>
-            <tr>
-                <td width="100">
-                    <a href="https://regex101.com" target="_blank"><img src="images/regex101.png" alt="Regex101" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://cloudconvert.com" target="_blank"><img src="images/cloudconvert.png" alt="CloudConvert" width="100"/></a>
-                </td>
-                <td width="100">
-                    <a href="https://tria.ge" target="_blank"><img src="images/triage.png" alt="Triage" width="100"/></a>
-                </td>
-            </tr>
-        </table>
-        <br/><br/>
-        <span style="text-align: center;">
-            <h6>By <a href="https://discord.com/users/561565119201673216">dogknife</a> on Discord</h6>
-            <h6>Usage is allowed.</h6>
-            <h6>General links I use frequently</h6>
-            <h6>Visit my <a href="https://duued.github.io">profile</a></h6>
-        </span>
+    <body>
+        <h1>This page is retired. Go to <a href="https://start.ryglassman.com">new</a> page</h1>
+        <h3>You will be redirected shortly</h3>
+         <h4>Not redirected? Use the above link.</h4>
     </body>
 </html>
