--- a/home.html
+++ b/home.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
         <script>
-            document.OnLoad(){
-                window.location.href = "https://www.example.com"
+            window.onload = function() {
+                window.location.href = "https://start.ryglassman.com";
             }
         </script>
         <style>
-            body{
+            body {
                 text-align: center;
             }
         </style>
@@ -18,6 +18,6 @@
     <body>
         <h1>This page is retired. Go to <a href="https://start.ryglassman.com">new</a> page</h1>
         <h3>You will be redirected shortly</h3>
-         <h4>Not redirected? Use the above link.</h4>
+        <h4>Not redirected? Use the above link.</h4>
     </body>
 </html>
